--- a/TopicMessageReceiver/TopicMessageReceiver.csproj
+++ b/TopicMessageReceiver/TopicMessageReceiver.csproj
@@ -9,9 +9,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.10.0" />
+		<PackageReference Include="Azure.Storage.Queues" Version="12.11.1" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\SharedLib\SharedLib.csproj" />
