--- a/TopicMessageReceiver/TopicMessageReceiver.csproj
+++ b/TopicMessageReceiver/TopicMessageReceiver.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.10.0" />
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.14.0" />
 		<PackageReference Include="Azure.Storage.Queues" Version="12.11.1" />
 	</ItemGroup>
 	<ItemGroup>
